<resources>
    <string name="app_name">Home Stock Manager</string>
    <string name="switch_test">this is a tester</string>
    <string name="title">Personal Stock Checker</string>
    <string name="search">Search</string>

    <string name="welcome"><b>Welcome to the Personal Stock Manager!</b></string>
    <string name="desc">This is a personal stock manager app. The purpose of this app
    is to help to reduce the amount of wasted food consumed by keeping inventory of items.
    Additionally, there is a menu section that will allow for a week of meals to be planned which
    will further help to reduce food waste.</string>

    <string name="menu_activity_title"><b>Menu Changer</b></string>
    <string name="menu_changer_desc"> This will allow you to change the meal title for the
        day selected. Simply click and edit the text box to the new meal name and then
        press the update button. </string>
    <string name="menu_item_name"><u>Meal name: </u></string>

    <string name="item_add_title">Add New Item</string>
    <string name="item_add_desc">This will allow you to add new items to the items list. Simply
    enter the name of the item you wish to add and press the add button.</string>
    <string name="item_name_label">Item Name: </string>


    <string name="item_edit_title">ITEM EDITOR</string>
    <string name="item_edit_desc">This will allow you to edit or delete an item from the items list.
        Simply edit the name of the item and press the edit button. Alternatively, press the delete
        button to remove the item from the list.</string>
    <string name="item_quantity_title">Quantity:</string>
    <string name="edit">EDIT</string>

    <string name="item_deletion">ITEM DELETION</string>
    <string name="item_deletion_help">Are you sure you want to delete … from the list?</string>
    <string name="item_deletion_yes">YES</string>
    <string name="item_deletion_no">NO</string>

    <string name="search_hint">Search here…</string>

    <string name="menu_search">Search</string>

    <string name="search_item">Search</string>
    <string name="view_all">View</string>
    <string name="add_new">Add</string>
    <string name="menu">Menu</string>

    <string name="element_text">Testing</string>

    Item names
    <string name="item_count">item_count</string>
    <string name="item_name">item_name</string>
    <string name="name_label">Name: </string>
    <string name="count_label">Amount: </string>

    Button Names
    <string name="add"> + </string>
    <string name="remove"> - </string>
    <string name="update"> Update </string>


    <string name="name_title"> <u>Name</u> </string>
    <string name="quantity_title"> <u>Quantity</u> </string>
    <string name="required_title"> <u>Required</u> </string>


    <string name="menu_name"> Menu name </string>
    <string name="menu_day"> Menu day </string>
    <string name="type_here">Type here…</string>

</resources>