<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singe_menu_item_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/menu_title"
            android:layout_width="413dp"
            android:layout_height="96dp"
            android:layout_marginBottom="11dp"
            android:background="#000000"
            android:clickable="false"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/menu_activity_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/menu_changer_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="AllCaps" />

        <EditText
            android:id="@+id/edit_menu_name"
            android:layout_width="355dp"
            android:layout_height="79dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:hint="@string/type_here"
            android:inputType="text|textMultiLine"
            android:singleLine="true"
            android:text="@string/menu_name"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/menu_update_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="262dp"
            android:text="@string/update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/menu_changer_desc"
            android:layout_width="347dp"
            android:layout_height="83dp"
            android:layout_marginStart="37dp"
            android:layout_marginEnd="37dp"
            android:layout_marginBottom="20dp"
            android:text="@string/menu_changer_desc"
            android:textAlignment="center"
            android:textColor="#2E2E2E"
            app:layout_constraintBottom_toTopOf="@+id/meal_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/meal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="276dp"
            android:layout_marginBottom="16dp"
            android:text="@string/menu_item_name"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_menu_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>