<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.MainActivity"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="-61dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/searchbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:commitIcon="?android:attr/actionModeWebSearchDrawable"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_hint"
            android:searchHintIcon="?android:attr/actionModeWebSearchDrawable"
            android:searchIcon="?android:attr/actionModeWebSearchDrawable"
            android:theme="@style/searchbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="95dp"
                android:text="@string/name_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/quantity_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/required_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/required_title"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/view_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="1dp"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>