<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singe_menu_item_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <TextView
        android:id="@+id/item_edit_title"
        android:layout_width="413dp"
        android:layout_height="96dp"
        android:background="#000000"
        android:clickable="false"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/item_edit_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/item_edit_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="AllCaps" />

    <EditText
        android:id="@+id/item_edit_name"
        android:layout_width="335dp"
        android:layout_height="67dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text|textMultiLine"
        android:singleLine="true"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_name" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="276dp"
        android:text="@string/item_name_label"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_edit_desc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menu_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="20dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/item_edit_desc"
        android:layout_width="351dp"
        android:layout_height="70dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="364dp"
        android:text="@string/item_edit_desc"
        android:textAlignment="center"
        android:textColor="#2E2E2E"
        app:layout_constraintBottom_toTopOf="@+id/item_edit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_edit_title" />

    <TextView
        android:id="@+id/item_quantity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="276dp"
        android:text="@string/item_quantity_title"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_edit_desc" />

    <EditText
        android:id="@+id/item_quantity"
        android:layout_width="46dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="303dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_quantity_title" />

</androidx.constraintlayout.widget.ConstraintLayout>