<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="205dp"
        android:layout_height="118dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="134dp"
        android:buttonTint="#37FF00"
        android:splitTrack="false"
        android:text="@string/switch_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:checked="true"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/addTextTest"
        android:layout_width="412dp"
        android:layout_height="68dp"
        android:layout_marginBottom="178dp"
        android:background="#000000"
        android:clickable="false"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="318dp"

        android:layout_height="40dp"
        android:autofillHints="Search"
        android:ems="10"
        android:hint="@string/search"
        android:iconifiedByDefault="false"
        android:inputType="text"
        android:queryHint="search"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTextTest"
        app:layout_constraintVertical_bias="0.064" />

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="413dp"
        android:layout_height="79dp"
        android:layout_marginTop="289dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/nav_items" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>